[gd_scene load_steps=4 format=4 uid="uid://c8c7arfd6m76d"]

[ext_resource type="PackedScene" uid="uid://bgtbd8yf2tcmw" path="res://scenes/tile_map_layer.tscn" id="1_msw0i"]
[ext_resource type="Script" uid="uid://7bw02ruadqjr" path="res://scenes/lowLevelNetowrk/lowLevelUi.gd" id="2_lfajs"]
[ext_resource type="Script" uid="uid://c6i1tcq3vjsea" path="res://scenes/lowLevelNetowrk/lowLevelPlayerSpawner.gd" id="3_bwngb"]

[node name="main" type="Node2D"]

[node name="TileMapLayer" parent="." instance=ExtResource("1_msw0i")]
tile_map_data = PackedByteArray("AAABACIAAAABAAAAAAACACIAAAABAAAAAAADACIAAAABAAAAAAAEACIAAAABAAAAAAAFACIAAAABAAAAAAAGACIAAAABAAAAAAAHACIAAAABAAAAAAAIACIAAAABAAAAAAAJACIAAAABAAAAAAAKACIAAAABAAAAAAALACIAAAABAAAAAAAMACIAAAABAAAAAAANACIAAAABAAAAAAAOACIAAAABAAAAAAAPACIAAAABAAAAAAAQACIAAAABAAAAAAARACIAAAABAAAAAAASACIAAAABAAAAAAATACIAAAABAAAAAAAUACIAAAABAAAAAAAVACIAAAABAAAAAAAWACIAAAABAAAAAAAXACIAAAABAAAAAAAYACIAAAABAAAAAAAZACIAAAABAAAAAAAaACIAAAABAAAAAAAbACIAAAABAAAAAAAcACIAAAABAAAAAAAdACIAAAABAAAAAAAeACIAAAABAAAAAAAfACIAAAABAAAAAAAgACIAAAABAAAAAAAhACIAAAABAAAAAAAiACIAAAABAAAAAAAjACIAAAABAAAAAAAkACIAAAABAAAAAAAlACIAAAABAAAAAAAmACIAAAABAAAAAAAnACIAAAABAAAAAAAoACIAAAABAAAAAAApACIAAAABAAAAAAAqACIAAAABAAAAAAArACIAAAABAAAAAAAsACIAAAABAAAAAAAtACIAAAABAAAAAAAuACIAAAABAAAAAAAvACIAAAABAAAAAAAwACIAAAABAAAAAAAxACIAAAABAAAAAAAyACIAAAABAAAAAAAzACIAAAABAAAAAAA0ACIAAAABAAAAAAA1ACIAAAABAAAAAAA2ACIAAAABAAAAAAA3ACIAAAABAAAAAAA4ACIAAAABAAAAAAA5ACIAAAABAAAAAAA6ACIAAAABAAAAAAA7ACIAAAABAAAAAAA8ACIAAAABAAAAAAA9ACIAAAABAAAAAAA+ACIAAAABAAAAAAA/ACIAAAABAAAAAABAACIAAAABAAAAAABBACIAAAABAAAAAABCACIAAAABAAAAAABDACIAAAABAAAAAABEACIAAAABAAAAAABFACIAAAABAAAAAABGACIAAAABAAAAAAABACMAAAABAAEAAAABACQAAAABAAEAAAABACUAAAABAAEAAAABACYAAAABAAEAAAABACcAAAABAAEAAAACACMAAAABAAEAAAACACQAAAABAAEAAAACACUAAAABAAEAAAACACYAAAABAAEAAAACACcAAAABAAEAAAADACMAAAABAAEAAAADACQAAAABAAEAAAADACUAAAABAAEAAAADACYAAAABAAEAAAADACcAAAABAAEAAAAEACMAAAABAAEAAAAEACQAAAABAAEAAAAEACUAAAABAAEAAAAEACYAAAABAAEAAAAEACcAAAABAAEAAAAFACMAAAABAAEAAAAFACQAAAABAAEAAAAFACUAAAABAAEAAAAFACYAAAABAAEAAAAFACcAAAABAAEAAAAGACMAAAABAAEAAAAGACQAAAABAAEAAAAGACUAAAABAAEAAAAGACYAAAABAAEAAAAGACcAAAABAAEAAAAHACMAAAABAAEAAAAHACQAAAABAAEAAAAHACUAAAABAAEAAAAHACYAAAABAAEAAAAHACcAAAABAAEAAAAIACMAAAABAAEAAAAIACQAAAABAAEAAAAIACUAAAABAAEAAAAIACYAAAABAAEAAAAIACcAAAABAAEAAAAJACMAAAABAAEAAAAJACQAAAABAAEAAAAJACUAAAABAAEAAAAJACYAAAABAAEAAAAJACcAAAABAAEAAAAKACMAAAABAAEAAAAKACQAAAABAAEAAAAKACUAAAABAAEAAAAKACYAAAABAAEAAAAKACcAAAABAAEAAAALACMAAAABAAEAAAALACQAAAABAAEAAAALACUAAAABAAEAAAALACYAAAABAAEAAAALACcAAAABAAEAAAAMACMAAAABAAEAAAAMACQAAAABAAEAAAAMACUAAAABAAEAAAAMACYAAAABAAEAAAAMACcAAAABAAEAAAANACMAAAABAAEAAAANACQAAAABAAEAAAANACUAAAABAAEAAAANACYAAAABAAEAAAANACcAAAABAAEAAAAOACMAAAABAAEAAAAOACQAAAABAAEAAAAOACUAAAABAAEAAAAOACYAAAABAAEAAAAOACcAAAABAAEAAAAPACMAAAABAAEAAAAPACQAAAABAAEAAAAPACUAAAABAAEAAAAPACYAAAABAAEAAAAPACcAAAABAAEAAAAQACMAAAABAAEAAAAQACQAAAABAAEAAAAQACUAAAABAAEAAAAQACYAAAABAAEAAAAQACcAAAABAAEAAAARACMAAAABAAEAAAARACQAAAABAAEAAAARACUAAAABAAEAAAARACYAAAABAAEAAAARACcAAAABAAEAAAASACMAAAABAAEAAAASACQAAAABAAEAAAASACUAAAABAAEAAAASACYAAAABAAEAAAASACcAAAABAAEAAAATACMAAAABAAEAAAATACQAAAABAAEAAAATACUAAAABAAEAAAATACYAAAABAAEAAAATACcAAAABAAEAAAAUACMAAAABAAEAAAAUACQAAAABAAEAAAAUACUAAAABAAEAAAAUACYAAAABAAEAAAAUACcAAAABAAEAAAAVACMAAAABAAEAAAAVACQAAAABAAEAAAAVACUAAAABAAEAAAAVACYAAAABAAEAAAAVACcAAAABAAEAAAAWACMAAAABAAEAAAAWACQAAAABAAEAAAAWACUAAAABAAEAAAAWACYAAAABAAEAAAAWACcAAAABAAEAAAAXACMAAAABAAEAAAAXACQAAAABAAEAAAAXACUAAAABAAEAAAAXACYAAAABAAEAAAAXACcAAAABAAEAAAAYACMAAAABAAEAAAAYACQAAAABAAEAAAAYACUAAAABAAEAAAAYACYAAAABAAEAAAAYACcAAAABAAEAAAAZACMAAAABAAEAAAAZACQAAAABAAEAAAAZACUAAAABAAEAAAAZACYAAAABAAEAAAAZACcAAAABAAEAAAAaACMAAAABAAEAAAAaACQAAAABAAEAAAAaACUAAAABAAEAAAAaACYAAAABAAEAAAAaACcAAAABAAEAAAAbACMAAAABAAEAAAAbACQAAAABAAEAAAAbACUAAAABAAEAAAAbACYAAAABAAEAAAAbACcAAAABAAEAAAAcACMAAAABAAEAAAAcACQAAAABAAEAAAAcACUAAAABAAEAAAAcACYAAAABAAEAAAAcACcAAAABAAEAAAAdACMAAAABAAEAAAAdACQAAAABAAEAAAAdACUAAAABAAEAAAAdACYAAAABAAEAAAAdACcAAAABAAEAAAAeACMAAAABAAEAAAAeACQAAAABAAEAAAAeACUAAAABAAEAAAAeACYAAAABAAEAAAAeACcAAAABAAEAAAAfACMAAAABAAEAAAAfACQAAAABAAEAAAAfACUAAAABAAEAAAAfACYAAAABAAEAAAAfACcAAAABAAEAAAAgACMAAAABAAEAAAAgACQAAAABAAEAAAAgACUAAAABAAEAAAAgACYAAAABAAEAAAAgACcAAAABAAEAAAAhACMAAAABAAEAAAAhACQAAAABAAEAAAAhACUAAAABAAEAAAAhACYAAAABAAEAAAAhACcAAAABAAEAAAAiACMAAAABAAEAAAAiACQAAAABAAEAAAAiACUAAAABAAEAAAAiACYAAAABAAEAAAAiACcAAAABAAEAAAAjACMAAAABAAEAAAAjACQAAAABAAEAAAAjACUAAAABAAEAAAAjACYAAAABAAEAAAAjACcAAAABAAEAAAAkACMAAAABAAEAAAAkACQAAAABAAEAAAAkACUAAAABAAEAAAAkACYAAAABAAEAAAAkACcAAAABAAEAAAAlACMAAAABAAEAAAAlACQAAAABAAEAAAAlACUAAAABAAEAAAAlACYAAAABAAEAAAAlACcAAAABAAEAAAAmACMAAAABAAEAAAAmACQAAAABAAEAAAAmACUAAAABAAEAAAAmACYAAAABAAEAAAAmACcAAAABAAEAAAAnACMAAAABAAEAAAAnACQAAAABAAEAAAAnACUAAAABAAEAAAAnACYAAAABAAEAAAAnACcAAAABAAEAAAAoACMAAAABAAEAAAAoACQAAAABAAEAAAAoACUAAAABAAEAAAAoACYAAAABAAEAAAAoACcAAAABAAEAAAApACMAAAABAAEAAAApACQAAAABAAEAAAApACUAAAABAAEAAAApACYAAAABAAEAAAApACcAAAABAAEAAAAqACMAAAABAAEAAAAqACQAAAABAAEAAAAqACUAAAABAAEAAAAqACYAAAABAAEAAAAqACcAAAABAAEAAAArACMAAAABAAEAAAArACQAAAABAAEAAAArACUAAAABAAEAAAArACYAAAABAAEAAAArACcAAAABAAEAAAAsACMAAAABAAEAAAAsACQAAAABAAEAAAAsACUAAAABAAEAAAAsACYAAAABAAEAAAAsACcAAAABAAEAAAAtACMAAAABAAEAAAAtACQAAAABAAEAAAAtACUAAAABAAEAAAAtACYAAAABAAEAAAAtACcAAAABAAEAAAAuACMAAAABAAEAAAAuACQAAAABAAEAAAAuACUAAAABAAEAAAAuACYAAAABAAEAAAAuACcAAAABAAEAAAAvACMAAAABAAEAAAAvACQAAAABAAEAAAAvACUAAAABAAEAAAAvACYAAAABAAEAAAAvACcAAAABAAEAAAAwACMAAAABAAEAAAAwACQAAAABAAEAAAAwACUAAAABAAEAAAAwACYAAAABAAEAAAAwACcAAAABAAEAAAAxACMAAAABAAEAAAAxACQAAAABAAEAAAAxACUAAAABAAEAAAAxACYAAAABAAEAAAAxACcAAAABAAEAAAAyACMAAAABAAEAAAAyACQAAAABAAEAAAAyACUAAAABAAEAAAAyACYAAAABAAEAAAAyACcAAAABAAEAAAAzACMAAAABAAEAAAAzACQAAAABAAEAAAAzACUAAAABAAEAAAAzACYAAAABAAEAAAAzACcAAAABAAEAAAA0ACMAAAABAAEAAAA0ACQAAAABAAEAAAA0ACUAAAABAAEAAAA0ACYAAAABAAEAAAA0ACcAAAABAAEAAAA1ACMAAAABAAEAAAA1ACQAAAABAAEAAAA1ACUAAAABAAEAAAA1ACYAAAABAAEAAAA1ACcAAAABAAEAAAA2ACMAAAABAAEAAAA2ACQAAAABAAEAAAA2ACUAAAABAAEAAAA2ACYAAAABAAEAAAA2ACcAAAABAAEAAAA3ACMAAAABAAEAAAA3ACQAAAABAAEAAAA3ACUAAAABAAEAAAA3ACYAAAABAAEAAAA3ACcAAAABAAEAAAA4ACMAAAABAAEAAAA4ACQAAAABAAEAAAA4ACUAAAABAAEAAAA4ACYAAAABAAEAAAA4ACcAAAABAAEAAAA5ACMAAAABAAEAAAA5ACQAAAABAAEAAAA5ACUAAAABAAEAAAA5ACYAAAABAAEAAAA5ACcAAAABAAEAAAA6ACMAAAABAAEAAAA6ACQAAAABAAEAAAA6ACUAAAABAAEAAAA6ACYAAAABAAEAAAA6ACcAAAABAAEAAAA7ACMAAAABAAEAAAA7ACQAAAABAAEAAAA7ACUAAAABAAEAAAA7ACYAAAABAAEAAAA7ACcAAAABAAEAAAA8ACMAAAABAAEAAAA8ACQAAAABAAEAAAA8ACUAAAABAAEAAAA8ACYAAAABAAEAAAA8ACcAAAABAAEAAAA9ACMAAAABAAEAAAA9ACQAAAABAAEAAAA9ACUAAAABAAEAAAA9ACYAAAABAAEAAAA9ACcAAAABAAEAAAA+ACMAAAABAAEAAAA+ACQAAAABAAEAAAA+ACUAAAABAAEAAAA+ACYAAAABAAEAAAA+ACcAAAABAAEAAAA/ACMAAAABAAEAAAA/ACQAAAABAAEAAAA/ACUAAAABAAEAAAA/ACYAAAABAAEAAAA/ACcAAAABAAEAAABAACMAAAABAAEAAABAACQAAAABAAEAAABAACUAAAABAAEAAABAACYAAAABAAEAAABAACcAAAABAAEAAABBACMAAAABAAEAAABBACQAAAABAAEAAABBACUAAAABAAEAAABBACYAAAABAAEAAABBACcAAAABAAEAAABCACMAAAABAAEAAABCACQAAAABAAEAAABCACUAAAABAAEAAABCACYAAAABAAEAAABCACcAAAABAAEAAABDACMAAAABAAEAAABDACQAAAABAAEAAABDACUAAAABAAEAAABDACYAAAABAAEAAABDACcAAAABAAEAAABEACMAAAABAAEAAABEACQAAAABAAEAAABEACUAAAABAAEAAABEACYAAAABAAEAAABEACcAAAABAAEAAABFACMAAAABAAEAAABFACQAAAABAAEAAABFACUAAAABAAEAAABFACYAAAABAAEAAABFACcAAAABAAEAAABGACMAAAABAAEAAABGACQAAAABAAEAAABGACUAAAABAAEAAABGACYAAAABAAEAAABGACcAAAABAAEAAAAAAB4AAAAHAAIAAAAAAB8AAAAHAAMAAAAAACAAAAAHAAQAAAAAACEAAAAHAAUAAABHAB4AAAAAAAIAAABHAB8AAAAAAAMAAABHACAAAAAAAAQAAABHACEAAAAAAAUAAAA=")

[node name="highLevelUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_lfajs")

[node name="VBoxContainer" type="VBoxContainer" parent="highLevelUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="btnServer" type="Button" parent="highLevelUI/VBoxContainer"]
layout_mode = 2
text = "Server"

[node name="btnClient" type="Button" parent="highLevelUI/VBoxContainer"]
layout_mode = 2
text = "Client"

[node name="Node" type="Node" parent="."]
script = ExtResource("3_bwngb")

[connection signal="pressed" from="highLevelUI/VBoxContainer/btnServer" to="highLevelUI" method="_on_btn_server_pressed"]
[connection signal="pressed" from="highLevelUI/VBoxContainer/btnClient" to="highLevelUI" method="_on_btn_client_pressed"]
